--- a/WPFUI/App.xaml
+++ b/WPFUI/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:WPFUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!-- I added -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:Bootstrapper x:Key="Bootstrapper" />
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
