sorted internal scope problem, had not defined PersonModel as public @TODO continue from 51:56

--- a/WPFUI/Views/ShellView.xaml
+++ b/WPFUI/Views/ShellView.xaml
@@ -24,16 +24,20 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
+        <!-- Row 1 -->
+            <!-- indirectly connected to model via binding code-->
+            <TextBlock x:Name="tblockFirstNameHolder" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan ="5"  FontSize="18" FontWeight="Bold" Text="{Binding Path=FullName, Mode=OneWay}">
+            </TextBlock>
+        <!-- Row 2 -->
+            <!-- connected via name to model -->
+            <TextBox x:Name="FirstName" Grid.Row="2" Grid.Column="1" FontSize="18" MinWidth="100">
+            </TextBox>
+            <!-- connected via name to model -->
+            <TextBox x:Name="LastName" Grid.Row="2" Grid.Column="2" FontSize="18" MinWidth="100">
+            </TextBox>
+        <!-- Row 3 -->
 
-        <TextBlock x:Name="tblockFirstNameHolder" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan ="5"  FontSize="18" FontWeight="Bold" Text="{Binding Path=FullName, Mode=OneWay}">
-        </TextBlock>
-        
-        <TextBox x:Name="FirstName" Grid.Row="2" Grid.Column="1" FontSize="18" MinWidth="100">
-        </TextBox>
-
-        <TextBox x:Name="LastName" Grid.Row="2" Grid.Column="2" FontSize="18" MinWidth="100">
-        </TextBox>
-        <ComboBox x:Name="hh" Grid.Column="1" Grid.Row="4">
-         </ComboBox>
+            <!-- indirectly connected to model via binding code-->
+        <ComboBox x:Name="People" Grid.Column="1" Grid.Row="3" SelectedItem="{Binding Path=SelectedPerson, Mode=OneWayToSource}" DisplayMemberPath="FirstName" />
     </Grid>
 </Window>
